# prism-root

./: .gitignore  .prettierignore  CHECKLIST.md  CLAUDE.md  Cargo.toml  HELM_AUDIT.md  README.md  SPEC.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.cargo/: config.toml
docs/: README.md
docs/adr/: 001-loro-over-yjs.md  002-unified-language-document-model.md  003-dynamic-data-providers.md  003-unified-builder-layout-model.md  004-composition-patterns.md  004-game-engine-patterns.md  004-puck-component-registry-and-dynamic-content.md  005-dockable-panel-system.md  005-puck-editor-help-and-ux-pass.md  006-live-bidirectional-slint-builder.md  007-slint-upgrade-interpreter-first.md  README.md
docs/dev/: README.md  builder-unification.md  clay-migration-plan.md  current-plan.md  data-template-system.md  facets.md  filemaker-gap-analysis.md  flux-port-gap-analysis.md  panel-modes.md  project-vault.md  slint-migration-plan.md  studio-checklist.md  widget-system.md
e2e/: editor.spec.ts  package.json  playwright-relay.config.ts  playwright.config.ts
e2e/tests/: canvas.spec.ts  editor.spec.ts  graph.spec.ts  heartbeat.spec.ts  keyboard.spec.ts  layout.spec.ts  shell.spec.ts  studio-kernel.spec.ts  tabs.spec.ts  tier1.spec.ts
scripts/: README.md
scripts/hooks/: post-edit-check.sh  pre-bash-guard.sh  pre-stop-check.sh
test-results/: .last-run.json
test-results/e2e-tests-graph-Phase-3-Th-7427a-igate-to-Graph-tab-via-KBar/: error-context.md
