[workspace]
resolver = "2"
members = [
    "packages/prism-daemon",
    "packages/prism-core",
    "packages/prism-builder",
    "packages/prism-shell",
    "packages/prism-studio/src-tauri",
    "packages/prism-cli",
    "packages/prism-relay",
    "packages/prism-dock",
]

# Shared package metadata — every crate opts in to `license` via
# `license.workspace = true`. The Prism codebase is GPL-3.0-or-later;
# that choice is load-bearing for the Slint dependency, which ships
# under GPLv3 + optional commercial. See the decision log in
# `docs/dev/slint-migration-plan.md` (2026-04-15 Clay → Slint pivot).
[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Single versioned source of truth for deps every crate uses. Bumping
# here propagates to every member via `workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
postcard = { version = "1", features = ["alloc"] }
# Local IPC transport for the daemon sidecar channel. Unix domain
# sockets on Linux/macOS, named pipes on Windows — both hidden behind
# one trait. Length-prefixed `postcard` frames ride on top.
interprocess = "2"
loro = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }

# Filesystem watcher. `prism-daemon::watcher_module` and `prism-cli::watch`
# both ride on this crate — the former exposes it as an IPC command, the
# latter drives the Phase 1 notify-driven dev-server scaffold (§11 of
# `docs/dev/slint-migration-plan.md`). Single workspace pin so daemon +
# CLI can't drift.
notify = "7"

# HTTP stack for `prism-relay` (Sovereign Portal SSR) and `prism-daemon`'s
# `transport-http` feature. axum is the idiomatic Rust web framework and
# is already proven inside the daemon's HTTP adapter — pinning it at the
# workspace level so both crates track the same version. `tower` /
# `tower-http` carry the middleware stack (tracing, compression, CORS,
# request limits) every HTTP-serving crate needs. Resolved by the Relay
# rewrite decision (2026-04-15).
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio", "matched-path", "query", "form", "ws"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["trace", "compression-gzip", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"] }

# UI toolkit — Slint owns both the declarative UI language
# (`.slint` files) and the render + windowing stack. Same crate ships
# the native backend (winit + femtovg/skia/software) and the web
# backend (winit on wasm32-unknown-unknown + webgl via femtovg). The
# 2026-04-15 Clay → Slint pivot (see `docs/dev/slint-migration-plan.md`)
# retired the `clay-layout` + hand-vendored wgpu renderer path in one
# stroke. `slint-build` drives the compile-time `.slint` → Rust codegen
# from each crate's `build.rs`. `slint-interpreter` is a Phase 3
# dependency of `prism-builder`, used to materialise a
# `BuilderDocument` into a runtime-compiled Slint component tree.
slint = { version = "1.8", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
slint-build = "1.8"
slint-interpreter = { version = "1.8", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
# `slint-interpreter::Compiler::build_from_source` is `async` but only
# genuinely so if a file loader is installed. `spin_on` is a zero-dep
# blocking executor the upstream Slint examples use for exactly this
# case; pin it at the workspace level so `prism-builder`'s `interpreter`
# feature and any future consumer track the same version.
spin_on = "0.1"

# 2D math — SIMD-accelerated Vec2/Affine2/Mat3 for the builder's
# transform system (ADR-003). Works on native + WASM.
glam = { version = "0.29", features = ["serde"] }
# CSS Grid + Flexbox + Block layout engine (ADR-003). Trait-based —
# composes with our own document tree. Used by Slint, Bevy, Dioxus.
taffy = "0.7"

# State + data structures.
slotmap = "1"
indexmap = { version = "2", features = ["serde"] }
imbl = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
regex = "1"
ropey = "1.6"
full_moon = { version = "2", features = ["luau"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
hkdf = "0.12"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# WASM glue — used by `prism-shell`'s web target (Slint on
# wasm32-unknown-unknown). The crate compiles to a wasm-bindgen
# module that `web/index.html` loads directly; no emscripten is
# involved on the shell side. The daemon still uses
# wasm32-unknown-emscripten for its Luau C core — that target is
# orthogonal and untouched by the Slint pivot.
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = "0.2"

# Dev-only.
insta = "1"
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = "fat"
